# python_translate

./: README.md  pyproject.toml
subtitle/: core.py  ex.ipynb  path.py  requirements.txt  translate.py  translated2  translated64  translated74  translated96  trnsme
