[tool.poetry]
name = "python_translate"
version = "0.1.0"
description = ""
authors = ["MahsaSanaei <mahsasanaei.n@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
googletrans = "^3.0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
